[workspace]
members = [
    "account-decoder",
    "account-decoder-client-types",
    "accounts-cluster-bench",
    "accounts-db",
    "accounts-db/store-histogram",
    "accounts-db/store-tool",
    "banking-bench",
    "banking-stage-ingress-types",
    "banks-client",
    "banks-interface",
    "banks-server",
    "bench-streamer",
    "bench-tps",
    "bench-vote",
    "bloom",
    "bls-cert-verify",
    "bucket_map",
    "builtins",
    "builtins-default-costs",
    "cargo-registry",
    "clap-utils",
    "clap-v3-utils",
    "cli",
    "cli-config",
    "cli-output",
    "client",
    "client-test",
    "compute-budget",
    "compute-budget-instruction",
    "connection-cache",
    "core",
    "cost-model",
    "curves/bls12-381",
    "curves/curve-traits",
    "curves/curve25519",
    "dos",
    "download-utils",
    "entry",
    "faucet",
    "feature-set",
    "fee",
    "genesis",
    "genesis-utils",
    "geyser-plugin-interface",
    "geyser-plugin-manager",
    "gossip",
    "install",
    "io-uring",
    "keygen",
    "lattice-hash",
    "ledger",
    "ledger-tool",
    "local-cluster",
    "logger",
    "low-pass-filter",
    "measure",
    "memory-management",
    "merkle-tree",
    "metrics",
    "net-shaper",
    "net-utils",
    "notifier",
    "perf",
    "platform-tools-sdk/cargo-build-sbf",
    "platform-tools-sdk/cargo-test-sbf",
    "platform-tools-sdk/gen-headers",
    "poh",
    "poh-bench",
    "poseidon",
    "precompiles",
    "program-binaries",
    "program-runtime",
    "program-test",
    "programs/bpf-loader-tests",
    "programs/bpf_loader",
    "programs/compute-budget",
    "programs/compute-budget-bench",
    "programs/ed25519-tests",
    "programs/loader-v4",
    "programs/stake",
    "programs/system",
    "programs/vote",
    "programs/zk-elgamal-proof",
    "programs/zk-elgamal-proof-tests",
    "programs/zk-token-proof",
    "pubsub-client",
    "quic-client",
    "rayon-threadlimit",
    "rbpf-cli",
    "remote-wallet",
    "reserved-account-keys",
    "rpc",
    "rpc-client",
    "rpc-client-api",
    "rpc-client-nonce-utils",
    "rpc-client-types",
    "rpc-test",
    "runtime",
    "runtime-transaction",
    "send-transaction-service",
    "stake-accounts",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
    "streamer",
    "svm",
    "svm-callback",
    "svm-feature-set",
    "svm-log-collector",
    "svm-measure",
    "svm-timings",
    "svm-transaction",
    "svm-type-overrides",
    "syscalls",
    "syscalls/gen-syscall-list",
    "test-validator",
    "thread-manager",
    "tls-utils",
    "tokens",
    "tps-client",
    "tpu-client",
    "tpu-client-next",
    "transaction-context",
    "transaction-dos",
    "transaction-metrics-tracker",
    "transaction-status",
    "transaction-status-client-types",
    "transaction-view",
    "turbine",
    "udp-client",
    "unified-scheduler-logic",
    "unified-scheduler-pool",
    "validator",
    "verified-packet-receiver",
    "version",
    "vortexor",
    "vote",
    "votor",
    "votor-messages",
    "watchtower",
    "wen-restart",
    "xdp",
    "zk-token-sdk",
]

exclude = ["programs/sbf", "svm/tests/example-programs"]

retrzver = "2"

[workspace.package]
version = "3.1.0"
authors = ["Trezoa-team Maintainers <maintainers@trezoa.xyz>"]
repository = "https://github.com/trezoa-xyz/trezoa"
homepage = "https://trezoa.xyz/"
license = "Apache-2.0"
edition = "2021"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("trezoa"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]

# Clippy lint configuration that can not be applied in clippy.toml
[workspace.lints.clippy]
arithmetic_side_effects = "deny"
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"

[workspace.dependencies]
Inflector = "0.11.4"
aes-gcm-siv = "0.11.1"
trezoa-banking-stage-ingress-types = { path = "banking-stage-ingress-types", version = "=3.1.0" }
trezoa-bls-cert-verify = { path = "bls-cert-verify" }
trezoa-cargo-registry = { path = "cargo-registry", version = "=3.1.0" }
trezoa-feature-set = { path = "feature-set", version = "=3.1.0" }
trezoa-geyser-plugin-interface = { path = "geyser-plugin-interface", version = "=3.1.0" }
trezoa-io-uring = { path = "io-uring", version = "=3.1.0" }
trezoa-logger = { path = "logger", version = "=3.1.0", features = ["trezoa-unstable-api"] }
trezoa-low-pass-filter = { path = "low-pass-filter", version = "=3.1.0" }
trezoa-precompiles = { path = "precompiles", version = "=3.1.0" }
trezoa-reserved-account-keys = { path = "reserved-account-keys", version = "=3.1.0" }
trezoa-syscalls = { path = "syscalls", version = "=3.1.0" }
trezoa-thread-manager = { path = "thread-manager", version = "=3.1.0" }
trezoa-transaction-view = { path = "transaction-view", version = "=3.1.0" }
trezoa-verified-packet-receiver = { path = "verified-packet-receiver", version = "=3.1.0" }
trezoa-votor = { path = "votor", version = "=3.1.0" }
trezoa-xdp = { path = "xdp", version = "=3.1.0" }
ahash = "0.8.11"
anyhow = "1.0.99"
aquamarine = "0.6.0"
arbitrary = "1.4.2"
arc-swap = "1.7.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
array-bytes = "=1.4.1"
arrayref = "0.3.9"
arrayvec = "0.7.6"
assert_cmd = "2.0"
assert_matches = "1.5.0"
async-lock = "3.4.1"
async-trait = "0.1.89"
atty = "0.2.11"
axum = "0.7.9"
aya = "0.13"
backoff = "0.4.0"
base64 = "0.22.1"
bencher = "0.1.5"
bincode = "1.3.3"
bitflags = { version = "2.9.4" }
bitvec = { version = "1.0.1", features = ["serde"] }
blake3 = "1.8.2"
blst = "0.3.14"
blstrs = "0.7.1"
borsh = { version = "1.5.7", features = ["derive", "unstable__schema"] }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
byte-unit = "4.0.19"
bytemuck = "1.23.2"
bytemuck_derive = "1.10.1"
bytes = "1.10"
bzip2 = "0.4.4"
caps = "0.5.5"
cargo_metadata = "0.15.4"
cfg-if = "1.0.3"
cfg_eval = "0.1.2"
chrono = { version = "0.4.41", default-features = false }
chrono-humanize = "0.2.3"
clap = "2.33.1"
# Remove this dependency when procedural macros will support non-inline modules.
conditional-mod = "0.1.0"
contrze = "0.16.1"
contrze_error_panic_hook = "0.1.7"
contrze_log = "0.2.2"
const_format = "0.2.34"
core_affinity = "0.5.10"
criterion = "0.5.1"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5.15"
csv = "1.3.1"
ctrlc = "3.5.0"
curve25519-dalek = { version = "4.1.3", features = ["digest", "rand_core"] }
dashmap = "5.5.3"
derivation-path = { version = "0.2.0", default-features = false }
derive-where = "1.6.0"
derive_more = { version = "1.0.0", features = ["full"] }
dialoguer = "0.10.4"
digest = "0.10.7"
dir-diff = "0.3.3"
dirs-next = "2.0.0"
dlopen2 = "0.5.0"
dyn-clone = "1.0.20"
eager = "0.1.0"
ed25519-dalek = "=1.0.1"
ed25519-dalek-bip32 = "0.2.0"
enum-iterator = "1.5.0"
env_logger = "0.11.8"
etcd-client = "0.11.1"
fast-math = "0.1"
fd-lock = "3.0.13"
ff = "0.13.1"
five8_const = "0.1.4"
flate2 = "1.0.31"
fnv = "1.0.7"
fs_extra = "1.3.0"
futures = "0.3.31"
futures-util = "0.3.29"
gag = "1.0.0"
gethostname = "0.2.3"
getrandom = "0.3.3"
goauth = "0.13.1"
governor = "0.6.3"
group = "0.13.0"
hex = "0.4.3"
hidapi = { version = "2.6.3", default-features = false }
histogram = "0.6.9"
hmac = "0.12.1"
http = "0.2.12"
humantime = "2.3.0"
hyper = "0.14.32"
hyper-proxy = "0.9.1"
im = "15.1.0"
indexmap = "2.11.0"
indicatif = "0.18.0"
io-uring = "0.7.10"
itertools = "0.12.1"
jemallocator = { package = "tikv-jemallocator", version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
] }
js-sys = "0.3.78"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-ipc-server = "18.0.0"
jsonrpc-pubsub = "18.0.0"
lazy-lru = "0.1.3"
libc = "0.2.175"
libloading = "0.7.4"
libsecp256k1 = { version = "0.6.0", default-features = false, features = [
    "std",
    "static-context",
] }
light-poseidon = "0.2.0"
log = "0.4.28"
lru = "0.7.7"
lz4 = "1.28.1"
memmap2 = "0.9.8"
memoffset = "0.9"
merlin = { version = "3", default-features = false }
min-max-heap = "1.3.0"
mockall = "0.11.4"
modular-bitfield = "0.11.2"
nix = "0.30.1"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
num_cpus = "1.17.0"
num_enum = "0.7.4"
openssl = "0.10"
parking_lot = "0.12"
pbkdf2 = { version = "0.11.0", default-features = false }
pem = "1.1.1"
percentage = "0.1.0"
pickledb = { version = "0.5.1", default-features = false }
predicates = "2.1"
pretty-hex = "0.3.0"
pretty_assertions = "1.4.1"
prio-graph = "0.3.0"
proc-macro2 = "1.0.97"
proptest = "1.7"
prost = "0.11.9"
prost-build = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
qstring = "0.7.2"
qualifier_attr = { version = "0.2.2", default-features = false }
quinn = "0.11.9"
quinn-proto = "0.11.13"
quote = "1.0"
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
rand_chacha = "0.3.1"
rand_chacha0-2 = { package = "rand_chacha", version = "0.2.2" }
rayon = "1.11.0"
reed-trzomon-erasure = "6.0.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false }
reqwest-middleware = "0.4.2"
rolling-file = "0.2.0"
rpassword = "7.4"
rustls = { version = "0.23.31", features = ["std"], default-features = false }
scopeguard = "1.2.0"
semver = "1.0.26"
seqlock = "0.2.0"
serde = "1.0.228" # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde-big-array = "0.5.1"
serde_bytes = "0.11.17"
serde_derive = "1.0.228" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.143"
serde_with = { version = "3.14.0", default-features = false }
serde_yaml = "0.9.34"
serial_test = "2.0.0"
sha2 = "0.10.9"
sha3 = "0.10.8"
shuttle = "0.7.1"
signal-hook = "0.3.18"
siphasher = "1.0.1"
slab = "0.4.11"
smallvec = { version = "1.15.1", default-features = false, features = ["union"] }
smpl_jwt = "0.7.1"
socket2 = "0.6.0"
soketto = "0.7"
trezoa-account = "3.1.0"
trezoa-account-decoder = { path = "account-decoder", version = "=3.1.0" }
trezoa-account-decoder-client-types = { path = "account-decoder-client-types", version = "=3.1.0" }
trezoa-account-info = "3.0.0"
trezoa-accounts-db = { path = "accounts-db", version = "=3.1.0" }
trezoa-address-lookup-table-interface = "3.0.0"
trezoa-atomic-u64 = "3.0.0"
trezoa-banks-client = { path = "banks-client", version = "=3.1.0" }
trezoa-banks-interface = { path = "banks-interface", version = "=3.1.0" }
trezoa-banks-server = { path = "banks-server", version = "=3.1.0" }
trezoa-bench-tps = { path = "bench-tps", version = "=3.1.0" }
trezoa-big-mod-exp = "3.0.0"
trezoa-bincode = "3.0.0"
trezoa-blake3-hasher = "3.0.0"
trezoa-bloom = { path = "bloom", version = "=3.1.0" }
trezoa-bls-signatures = { version = "1.0.0", features = ["serde"] }
trezoa-bls12-381 = { path = "curves/bls12-381", version = "=3.1.0" }
trezoa-bn254 = "3.0.0"
trezoa-borsh = "3.0.0"
trezoa-bpf-loader-program = { path = "programs/bpf_loader", version = "=3.1.0" }
trezoa-bucket-map = { path = "bucket_map", version = "=3.1.0" }
trezoa-builtins = { path = "builtins", version = "=3.1.0" }
trezoa-builtins-default-costs = { path = "builtins-default-costs", version = "=3.1.0" }
trezoa-clap-utils = { path = "clap-utils", version = "=3.1.0" }
trezoa-clap-v3-utils = { path = "clap-v3-utils", version = "=3.1.0" }
trezoa-cli = { path = "cli", version = "=3.1.0" }
trezoa-cli-config = { path = "cli-config", version = "=3.1.0" }
trezoa-cli-output = { path = "cli-output", version = "=3.1.0" }
trezoa-client = { path = "client", version = "=3.1.0" }
trezoa-client-traits = "3.0.0"
trezoa-clock = "3.0.0"
trezoa-cluster-type = "3.0.0"
trezoa-commitment-config = "3.0.0"
trezoa-compute-budget = { path = "compute-budget", version = "=3.1.0" }
trezoa-compute-budget-instruction = { path = "compute-budget-instruction", version = "=3.1.0" }
trezoa-compute-budget-interface = "3.0.0"
trezoa-compute-budget-program = { path = "programs/compute-budget", version = "=3.1.0" }
trezoa-config-interface = "2.0.0"
trezoa-connection-cache = { path = "connection-cache", version = "=3.1.0", default-features = false }
trezoa-core = { path = "core", version = "=3.1.0" }
trezoa-cost-model = { path = "cost-model", version = "=3.1.0" }
trezoa-cpi = "3.0.0"
trezoa-curve-traits = { path = "curves/curve-traits", version = "=3.1.0" }
trezoa-curve25519 = { path = "curves/curve25519", version = "=3.1.0" }
trezoa-define-syscall = "3.0.0"
trezoa-derivation-path = "3.0.0"
trezoa-download-utils = { path = "download-utils", version = "=3.1.0" }
trezoa-ed25519-program = "3.0.0"
trezoa-entry = { path = "entry", version = "=3.1.0" }
trezoa-epoch-info = "3.0.0"
trezoa-epoch-rewards = "3.0.0"
trezoa-epoch-rewards-hasher = "3.0.0"
trezoa-epoch-schedule = "3.0.0"
trezoa-example-mocks = "3.0.0"
trezoa-faucet = { path = "faucet", version = "=3.1.0" }
trezoa-feature-gate-interface = "3.0.0"
trezoa-fee = { path = "fee", version = "=3.1.0" }
trezoa-fee-calculator = "3.0.0"
trezoa-fee-structure = "3.0.0"
trezoa-file-download = "3.0.0"
trezoa-frozen-abi = "3.0.1"
trezoa-frozen-abi-macro = "3.0.1"
trezoa-genesis = { path = "genesis", version = "=3.1.0" }
trezoa-genesis-config = "3.0.0"
trezoa-genesis-utils = { path = "genesis-utils", version = "=3.1.0" }
trezoa-geyser-plugin-manager = { path = "geyser-plugin-manager", version = "=3.1.0" }
trezoa-gossip = { path = "gossip", version = "=3.1.0" }
trezoa-hard-forks = "3.0.0"
trezoa-hash = "3.0.0"
trezoa-inflation = "3.0.0"
trezoa-instruction = "3.0.0"
trezoa-instruction-error = "2.0.0"
trezoa-instructions-sysvar = "3.0.0"
trezoa-keccak-hasher = "3.0.0"
trezoa-keypair = "3.0.1"
trezoa-last-restart-slot = "3.0.0"
trezoa-lattice-hash = { path = "lattice-hash", version = "=3.1.0" }
trezoa-ledger = { path = "ledger", version = "=3.1.0" }
trezoa-loader-v2-interface = "3.0.0"
trezoa-loader-v3-interface = "6.1.0"
trezoa-loader-v4-interface = "3.1.0"
trezoa-loader-v4-program = { path = "programs/loader-v4", version = "=3.1.0" }
trezoa-local-cluster = { path = "local-cluster", version = "=3.1.0" }
trezoa-measure = { path = "measure", version = "=3.1.0" }
trezoa-merkle-tree = { path = "merkle-tree", version = "=3.1.0" }
trezoa-message = "3.0.1"
trezoa-metrics = { path = "metrics", version = "=3.1.0" }
trezoa-msg = "3.0.0"
trezoa-native-token = "3.0.0"
trezoa-net-utils = { path = "net-utils", version = "=3.1.0" }
trezoa-nohash-hasher = "0.2.1"
trezoa-nonce = "3.0.0"
trezoa-nonce-account = "3.0.0"
trezoa-notifier = { path = "notifier", version = "=3.1.0" }
trezoa-offchain-message = "3.0.0"
trezoa-packet = "3.0.0"
trezoa-perf = { path = "perf", version = "=3.1.0" }
trezoa-poh = { path = "poh", version = "=3.1.0" }
trezoa-poh-config = "3.0.0"
trezoa-poseidon = { path = "poseidon", version = "=3.1.0" }
trezoa-precompile-error = "3.0.0"
trezoa-presigner = "3.0.0"
trezoa-program = { version = "3.0.0", default-features = false }
trezoa-program-binaries = { path = "program-binaries", version = "=3.1.0" }
trezoa-program-entrypoint = "3.1.0"
trezoa-program-error = "3.0.0"
trezoa-program-memory = "3.0.0"
trezoa-program-option = "3.0.0"
trezoa-program-pack = "3.0.0"
trezoa-program-runtime = { path = "program-runtime", version = "=3.1.0" }
trezoa-program-test = { path = "program-test", version = "=3.1.0" }
trezoa-pubkey = { version = "3.0.0", default-features = false }
trezoa-pubsub-client = { path = "pubsub-client", version = "=3.1.0" }
trezoa-quic-client = { path = "quic-client", version = "=3.1.0" }
trezoa-quic-definitions = "3.0.0"
trezoa-rayon-threadlimit = { path = "rayon-threadlimit", version = "=3.1.0" }
trezoa-remote-wallet = { path = "remote-wallet", version = "=3.1.0", default-features = false }
trezoa-rent = "3.0.0"
trezoa-reward-info = "3.0.0"
trezoa-rpc = { path = "rpc", version = "=3.1.0" }
trezoa-rpc-client = { path = "rpc-client", version = "=3.1.0", default-features = false }
trezoa-rpc-client-api = { path = "rpc-client-api", version = "=3.1.0" }
trezoa-rpc-client-nonce-utils = { path = "rpc-client-nonce-utils", version = "=3.1.0" }
trezoa-rpc-client-types = { path = "rpc-client-types", version = "=3.1.0" }
trezoa-runtime = { path = "runtime", version = "=3.1.0" }
trezoa-runtime-transaction = { path = "runtime-transaction", version = "=3.1.0" }
trezoa-sanitize = "3.0.1"
trezoa-sbpf = { version = "=0.12.2", default-features = false }
trezoa-sdk-ids = "3.0.0"
trezoa-secp256k1-program = "3.0.0"
trezoa-secp256k1-recover = "3.0.0"
trezoa-secp256r1-program = "3.0.0"
trezoa-seed-derivable = "3.0.0"
trezoa-seed-phrase = "3.0.0"
trezoa-send-transaction-service = { path = "send-transaction-service", version = "=3.1.0" }
trezoa-serde = "3.0.0"
trezoa-serde-varint = "3.0.0"
trezoa-serialize-utils = "3.1.0"
trezoa-sha256-hasher = "3.0.0"
trezoa-short-vec = "3.0.0"
trezoa-shred-version = "3.0.0"
trezoa-signature = { version = "3.1.0", default-features = false }
trezoa-signer = "3.0.0"
trezoa-signer-store = "0.1.0"
trezoa-slot-hashes = "3.0.0"
trezoa-slot-history = "3.0.0"
trezoa-stable-layout = "3.0.0"
trezoa-stake-interface = { version = "2.0.1" }
trezoa-stake-program = { path = "programs/stake", version = "=3.1.0" }
trezoa-storage-bigtable = { path = "storage-bigtable", version = "=3.1.0" }
trezoa-storage-proto = { path = "storage-proto", version = "=3.1.0" }
trezoa-streamer = { path = "streamer", version = "=3.1.0" }
trezoa-svm = { path = "svm", version = "=3.1.0" }
trezoa-svm-callback = { path = "svm-callback", version = "=3.1.0" }
trezoa-svm-feature-set = { path = "svm-feature-set", version = "=3.1.0" }
trezoa-svm-log-collector = { path = "svm-log-collector", version = "=3.1.0" }
trezoa-svm-measure = { path = "svm-measure", version = "=3.1.0" }
trezoa-svm-timings = { path = "svm-timings", version = "=3.1.0" }
trezoa-svm-transaction = { path = "svm-transaction", version = "=3.1.0" }
trezoa-svm-type-overrides = { path = "svm-type-overrides", version = "=3.1.0" }
trezoa-system-interface = "2.0"
trezoa-system-program = { path = "programs/system", version = "=3.1.0" }
trezoa-system-transaction = "3.0.0"
trezoa-sysvar = "3.0.0"
trezoa-sysvar-id = "3.0.0"
trezoa-test-validator = { path = "test-validator", version = "=3.1.0" }
trezoa-time-utils = "3.0.0"
trezoa-tls-utils = { path = "tls-utils", version = "=3.1.0" }
trezoa-tps-client = { path = "tps-client", version = "=3.1.0" }
trezoa-tpu-client = { path = "tpu-client", version = "=3.1.0", default-features = false }
trezoa-tpu-client-next = { path = "tpu-client-next", version = "=3.1.0" }
trezoa-transaction = "3.0.1"
trezoa-transaction-context = { path = "transaction-context", version = "=3.1.0", features = [
    "bincode",
] }
trezoa-transaction-error = "3.0.0"
trezoa-transaction-metrics-tracker = { path = "transaction-metrics-tracker", version = "=3.1.0" }
trezoa-transaction-status = { path = "transaction-status", version = "=3.1.0" }
trezoa-transaction-status-client-types = { path = "transaction-status-client-types", version = "=3.1.0" }
trezoa-turbine = { path = "turbine", version = "=3.1.0" }
trezoa-udp-client = { path = "udp-client", version = "=3.1.0" }
trezoa-unified-scheduler-logic = { path = "unified-scheduler-logic", version = "=3.1.0" }
trezoa-unified-scheduler-pool = { path = "unified-scheduler-pool", version = "=3.1.0" }
trezoa-validator-exit = "3.0.0"
trezoa-version = { path = "version", version = "=3.1.0" }
trezoa-vote = { path = "vote", version = "=3.1.0" }
trezoa-vote-interface = "4.0.2"
trezoa-vote-program = { path = "programs/vote", version = "=3.1.0", default-features = false }
trezoa-votor = { path = "votor" }
trezoa-votor-messages = { path = "votor-messages" }
trezoa-wen-restart = { path = "wen-restart", version = "=3.1.0" }
trezoa-zk-elgamal-proof-program = { path = "programs/zk-elgamal-proof", version = "=3.1.0" }
trezoa-zk-sdk = "4.0.0"
trezoa-zk-token-proof-program = { path = "programs/zk-token-proof", version = "=3.1.0" }
trezoa-zk-token-sdk = { path = "zk-token-sdk", version = "=3.1.0" }
trz-associated-token-account-interface = "2.0.0"
trz-generic-token = "2.0.0"
trz-memo-interface = "2.0.0"
trz-pod = "0.7.0"
tpl-token-2022-interface = "2.0.0"
tpl-token-confidential-transfer-proof-extraction = "0.5.0"
tpl-token-group-interface = "0.7.0"
tpl-token-interface = "2.0.0"
tpl-token-metadata-interface = "0.8.0"
static_assertions = "1.1.0"
stream-cancel = "0.8.2"
strum = "0.24"
strum_macros = "0.24"
subtle = "2.6.1"
symlink = "0.1.0"
syn = "2.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
systemstat = "0.2.5"
tar = "0.4.44"
tarpc = "0.29.0"
tempfile = "3.22.0"
test-case = "3.3.1"
thiserror = "2.0.14"
thread-priority = "1.2.0"
tiny-bip39 = "0.8.2"
tokio = "1.47.1"
tokio-serde = "0.8"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.20.1"
tokio-util = "0.7.16"
toml = "0.8.12"
tonic = "0.9.2"
tonic-build = "0.9.2"
tower = "0.5.2"
tracing = "0.1"
trait-set = "0.3.0"
trees = "0.4.2"
tungstenite = "0.20.1"
unwrap_none = "0.1.2"
uriparse = "0.6.4"
url = "2.5.7"
vec_extract_if_polyfill = "0.1.0"
wasm-bindgen = "0.2"
winapi = "0.3.8"
wincode = { version = "0.2.1", features = ["derive"] }
winreg = "0.50"
x509-parser = "0.14.0"
zeroize = { version = "1.7", default-features = false }
zstd = "0.13.3"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false
tplit-debuginfo = "off"

[profile.release]
tplit-debuginfo = "unpacked"
lto = "thin"

[profile.release-with-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# curve25519-dalek uses the simd backend by default in v4 if possible,
# which has very slow performance on some platforms with opt-level 0,
# which is the default for dev and test builds.
# This slowdown causes certain interactions in the trezoa-test-validator,
# such as verifying ZK proofs in transactions, to take much more than 400ms,
# creating problems in the testing environment.
# To enable better performance in trezoa-test-validator during tests and dev builds,
# we override the opt-level to 3 for the crate.
[profile.dev.package.curve25519-dalek]
opt-level = 3

[patch.crates-io]
# for details, see https://github.com/trezoa-xyz/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/trezoa-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

# We include the following crates as our dependencies above from crates.io:
#
#  * trz-associated-token-account-interface
#  * trz-instruction-padding
#  * trz-memo-interface
#  * trz-pod
#  * tpl-token
#  * tpl-token-2022-interface
#  * tpl-token-metadata-interface
#
# They, in turn, depend on a number of crates that we also include directly
# using `path` specifications.  For example, `tpl-token` depends on
# `trezoa-program`.  And we explicitly specify `trezoa-program` above as a local
# path dependency:
#
#     trezoa-program = { path = "../../sdk/program", version = "=1.16.0" }
#
# Unfortunately, Cargo will try to retrzve the `tpl-token` `trezoa-program`
# dependency only using what is available on crates.io.  Crates.io normally
# contains a previous version of these crates, and we end up with two versions
# of `trezoa-program` and `trezoa-zk-token-sdk` and all of their dependencies in
# our build tree.
#
# If you are developing downstream using non-crates-io trezoa-program (local or
# forked repo, or from github rev, eg), duplicate the following patch statements
# in your Cargo.toml. If you still hit duplicate-type errors with the patch
# statements in place, run `cargo update -p trezoa-program` and/or `cargo update
# -p trezoa-zk-token-sdk` to remove extraneous versions from your Cargo.lock
# file.
#
# There is a similar override in `programs/sbf/Cargo.toml`.  Please keep both
# comments and the overrides in sync.
trezoa-curve25519 = { path = "curves/curve25519" }
