[package]
name = "trezoa-cargo-registry"
description = "Trezoa cargo registry"
documentation = "https://docs.rs/trezoa-cargo-registry"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
dev-context-only-utils = []

[dependencies]
trezoa-logger = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true, features = ["full"] }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
trezoa-clap-utils = { workspace = true }
trezoa-cli = { workspace = true }
trezoa-cli-config = { workspace = true }
trezoa-cli-output = { workspace = true }
trezoa-commitment-config = { workspace = true }
trezoa-keypair = { workspace = true }
trezoa-pubkey = { workspace = true }
trezoa-remote-wallet = { workspace = true, features = ["default"] }
trezoa-rpc-client = { workspace = true, features = ["default"] }
trezoa-rpc-client-api = { workspace = true }
trezoa-signer = { workspace = true }
trezoa-version = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }

[dev-dependencies]
